# akai-core

./: .gitignore  CMakeLists.txt  address.cpp  address.h  akai-whale.pro  crypto.cpp  crypto.h  main.cpp  peer.cpp  peer.h  request.cpp  request.h  test.py
include/: peer.h  request.h
src/: crypto.cpp  request.cpp
